finished discussion questions

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -4,8 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![alt text](results/profilePlot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Profile plot description:\n",
-    "The figure was generated using the profile plot utility of deeptools. Both sample show a peak in ChIP signal and an immediate drop off at the TSS and low signal all the way until the TES as expected. This shows open chromatin at the TSS as expected for conditions with high TF activity"
+    "The figure was generated using the profile plot utility of deeptools. Both sample show a peak in ChIP signal and an immediate drop off at the TSS and low signal all the way until the TES as expected. This shows high binding at and before the TSS, which make sense as this is where the transcription factor would bind. Another green flag is seeing no signal throughout the gene regions, which makes sense as we know the transcription factor shouldn't bind there."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](homerRes.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The top motifs (1-4) are all runx type motifs, which makes sense as this was a Runx1 ChIP-seq experiment. Other motifs, such as the FOXA motifs for example, probably show cofactor activity, as FOXA in particular helps recruit TFs to bind to chromatin. A quick review of some reference articles also suggests that the sequence of certain motifs can influence how enriched they appear in the data, with more specific and simple motifs being favored. Looking at the FOXA motifs, it seems like that could be part of it. However, others, like the HBE-GRHL2 motif, appear much more complex and non-specific, so it's not immediately clear to me how that's coming up other than some amount of random noise. "
    ]
   },
   {
@@ -19,6 +40,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "QC Report Summary:\n",
     "Firstly, looking at the FastQC reports, GC content appears to follow a roughly normal distribution but differs slightly between INPUT and IP samples, as well as having what looks to be a small second peak in all distributions. Given that we expect different sequences between IP and INPUT, this isn't a red flag. However, FastQC does consider the distributions for the INNPUT samples to show an issue, which may need to be investigated further. Quality scores also look fine, with high quality across all samples. Duplication is higher in IP samples but again that is to be expected. One concern is the much lower number of sequences in the rep2 INPUT, with 10M instead of the ~30M in other samples. Flagstat results don't seem to show red flags either, with most reads from all samples passing QC checks and mapping. Trimmomatic also shows not many sequences were dropped, which is a good sign. "
@@ -26,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1149,13 +1175,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/ipykernel_3174670/1686540231.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/scratch/ipykernel_3207722/1686540231.py:4: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  numUp5 = len(merged[merged['log2FoldChange'] > 1][abs(merged['dist']) < 5000])\n",
-      "/scratch/ipykernel_3174670/1686540231.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/scratch/ipykernel_3207722/1686540231.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  numUp20 = len(merged[merged['log2FoldChange'] > 1][abs(merged['dist']) < 20000])\n",
-      "/scratch/ipykernel_3174670/1686540231.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/scratch/ipykernel_3207722/1686540231.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  numDn5 = len(merged[merged['log2FoldChange'] < -1][abs(merged['dist']) < 5000])\n",
-      "/scratch/ipykernel_3174670/1686540231.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/scratch/ipykernel_3207722/1686540231.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  numDn20 = len(merged[merged['log2FoldChange'] < -1][abs(merged['dist']) < 20000])\n"
      ]
     },
@@ -1212,6 +1238,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For the closer to the TSS binding sites the results roughly line up with the paper, but the longer range (+/-20kb) binding sites are fewer in my data compared to the paper's results. Since they were less clear about how exactly they determined +/-20kb of the gene I may have used a different cutoff method (just approximating to +/-20kb of the TSS). If that is the case, I think my method checked a smaller range since I underestimates how long the average gene would be, and therefore how much more of a range you would get from +/-20kb of the whole gene versus the TSS alone. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "MALAT1 Tracks:\n",
     "![alt text](MALAT1_tracks.png)\n",
     "NEAT1 Tracks:\n",
@@ -1220,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1374,7 @@
        "[2 rows x 22 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1352,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1478,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1456,14 +1489,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/scratch/ipykernel_3174670/954301348.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/scratch/ipykernel_3207722/954301348.py:1: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  merged[merged['start'] > 65410000][merged['start'] < 65450000]\n"
      ]
     },
@@ -1557,7 +1590,7 @@
        "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1619,8 +1652,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](results/plot.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at my results the most notable thing is the difference between the IP samples. In both my data and their data, the input samples cluster together but for some reason the actaul Runx1 ChIP samples don't cluster as well. In fact, IP_rep1 splits off from the other three when looking at the dendrogram. Part of that seems to be a surprising level of correlation between IP_rep2 and input_rep1. In the original paper, this figure supports the quality of the experiment by confirming that the replicates for each condition were similar. Seeing my results, it seems that either I did something wrong or some difference in methodology/tools shows less strong support for the data quality.  "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1656,6 +1703,27 @@
    "metadata": {},
    "source": [
     "I think what happened here is that I was supposed to use the blacklist to filter before intersecting the peaks, but I instead intersected then filtered using the blacklist. I do think it's a good sign that there are more peaks for rep2 compared to rep1 and that the total number of filtered reproducible peaks I get (3060) is around what the paper found (3466). I'm also not sure if they set a different p-value threshold that got rid of some \"noisy\" peaks that I had. If so, it's possible that my initial peakcalling picked up many peaks that probably were removed in the intersection part because any noise would likely not be consistent between the two replicates. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt = ''\n",
+    "for g in merged['gene_name']:\n",
+    "    txt += g + '\\n'\n",
+    "\n",
+    "with open(\"peakAnns.txt\", 'w') as f:\n",
+    "    f.write(txt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![alt text](peakAnns.png)"
    ]
   }
  ],
